<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocializeMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_settings">Settings</string>
    <string name="edit_message">Edit this</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone Number</string>
    <string name="text_email">Email</string>
    <string name="text_save">Save</string>
    <string name="text_back">Back</string>
    <string name="text_nfc">NFC</string>
    <string name="text_qr">QR</string>
    <string name="text_pull">Pull from accounts</string>
    <string name="text_twitter">Twitter</string>
    <string name="text_facebook">Facebook</string>
    <string name="title_activity_nfc">NFC</string>
    <string name="nfc_instructions">Hold phones back-to-back. The user that is sending their accounts should touch their screen. </string>
	<string name="qr_encode">QR - Encoder</string>
	<string name="qr_scan">QR - Scanner</string>
	<string name="main_help">An internet connection is required to generate a QR code</string>	
</resources>