<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NFC" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/nfc_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_Name"
        android:ems="10"
        android:hint="@string/text_name"
        android:inputType="textPersonName">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Name"
        android:layout_below="@+id/editText_Name"
        android:text="@string/text_phone" />

    <EditText
        android:id="@+id/editText_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Name"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_Number"
        android:ems="10"
        android:hint="@string/text_phone"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/textView_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Name"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:text="@string/text_name" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Number"
        android:layout_below="@+id/editText_Number"
        android:text="@string/text_email" />

    <EditText
        android:id="@+id/editText_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Number"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_Email"
        android:ems="10"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/textView_Twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Email"
        android:layout_below="@+id/editText_Email"
        android:text="@string/text_twitter" />

    <EditText
        android:id="@+id/editText_Twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Email"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_Twitter"
        android:ems="10"
        android:hint="@string/text_twitter" 
        android:inputType="text"/>

</RelativeLayout>